# lab06

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  LICENSE
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  example1  example2  install_manifest.txt
